runFormatTest(import.meta, ['slang'], { compiler: '0.8.36' });
runFormatTest(import.meta, ['slang'], {
  compiler: '0.8.36',
  experimentalOperatorPosition: 'start'
});
